--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,4 +40,5 @@ jobs:
           # Artifact name
           name: qwe
           # A file, directory or wildcard pattern that describes what to upload
+          path: a2.txt
           
